--- a/src/app/components/admin-user/admin-user.component.css
+++ b/src/app/components/admin-user/admin-user.component.css
@@ -33,24 +33,40 @@
   ::ng-deep
   .p-datatable
   .p-datatable-tbody
-  > tr:last-child
+  > tr:first-child
   > td:first-child {
-  border-bottom-left-radius: 0 !important;
-  box-shadow: inset 24px -17px 8px -24px #b8b9be,
-    inset -4px 0px 0px -2px #d1d9e6 !important;
+  box-shadow: inset 10px -3px 7px -9px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
+    inset 0px 3px 0px -2px #d1d9e6 !important;
 }
 
 .table-users
   ::ng-deep
   .p-datatable
   .p-datatable-tbody
-  .sticky-column-checkboxes {
-  box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
+  > tr:last-child
+  > td:first-child {
+  border-bottom-left-radius: 0 !important;
+  box-shadow: inset 25px 0px 8px -24px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
+    inset 0px 3px 0px -2px #d1d9e6 !important;
 }
 
-.table-users ::ng-deep .p-datatable .p-datatable-tbody .sticky-checkboxes-main {
-  box-shadow: inset 9px 9px 9px -9px #b8b9be, inset 0px -3px 0px -2px #d1d9e6,
-    inset -4px 0px 0px -2px #d1d9e6 !important;
+.table-users ::ng-deep .p-datatable-table .sticky-column-checkboxes {
+  position: sticky;
+  background-color: #e6e7ee !important;
+  z-index: 1;
+  left: 0 !important;
+  box-shadow: inset 10px -3px 7px -9px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
+    inset 0px 3px 0px -2px #d1d9e6;
+  border-top: none;
+}
+
+.table-users ::ng-deep .p-datatable-table .sticky-checkboxes-main {
+  top: 0 !important;
+  position: sticky !important;
+  z-index: 2 !important;
+  box-shadow: inset 9px 9px 8px -9px #b8b9be, inset -4px 0px 0px -2px #d1d9e6,
+    inset 0px -3px 0px -2px #d1d9e6 !important;
+  border-top-left-radius: 1rem !important;
 }
 
 .add-user-i {
@@ -69,7 +85,7 @@
 ::ng-deep .p-datatable .p-datatable-tfoot > tr {
   border: none;
   border-top: 0.0625rem solid #d1d9e6;
-  box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
+  box-shadow: inset 5px 0 8px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
 }
 
 ::ng-deep .p-datatable .p-datatable-tfoot > tr > td:last-child {
