--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -110,8 +110,7 @@ textarea {
 }
 
 ::ng-deep .modifyingAddress .p-dropdown .p-dropdown-panel {
-  width: 14rem;
-  left: -11px !important;
+  width: 100%;
   background: #e6e7ee;
 }
 
@@ -239,6 +238,10 @@ textarea {
 
 .address-col {
   padding-right: 0rem !important;
+}
+
+.address-col textarea {
+  width: 96% !important;
 }
 
 .btnChangeStatus .iconbutton-container {
