--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -61,12 +61,13 @@
     </div>
   </div>
   <div class="form-row">
+    <!-- <div (click)="testBtn()" >testBtnCall</div> -->
     <div class="col-4 button-inline">
       <p-dropdown [options]="optVoiceMail" class="button-neumorphism" (onChange)="leaveVoiceMail()"
         optionLabel="templateName" optionValue="templateId" placeholder="VM" [formControl]="voiceMailLeft"></p-dropdown>
     </div>
     <div class="col-4 button-inline">
-      <p-dropdown [options]="optSMS" class="button-neumorphism" (onChange)="sendSMSMessage()" optionLabel="templateName"
+      <p-dropdown [options]="optSMS" class="button-neumorphism" (onChange)="sendSMSMessage($event)" optionLabel="templateName"
         optionValue="templateId" placeholder="SMS" [formControl]="smsMessageSent"></p-dropdown>
     </div>
     <div class="col-4 button-inline">
